<resources>
    <string name="app_name">Converter</string>
    <string name="button_convert">CONVERT</string>
    <string name="edit_frahaneit">Frahaneit</string>
    <string name="edit_celsius">Celsius</string>
    <string name="text_conversion">CONVERSION</string>
    <string name="button_conversion_f_to_c">Frahaneit to Celsius</string>
    <string name="button_conversion_c_to_f">Celsius to Frahaneit</string>
    <string name="fahrenheit_to_celsius">Fahrenheit to Celsius</string>
    <string name="celsius_to_fahrenheit">Celsius to Fahrenheit</string>
    <string name="convert">Convert</string>
    <string name="textview">TextView</string>
    <string name="history">TextView1</string>
    <string name="converterHistory">TextView</string>
    <string name="convertHistory">TextView</string>
    <string name="convertHistoryLandScape">TextView</string>
    <string name="log">Logs</string>
    <string name="title_activity_logs">Logs</string>
</resources>
