<?xml version="1.0" encoding="utf-8"?><!--<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"--><!--xmlns:app="http://schemas.android.com/apk/res-auto"--><!--xmlns:tools="http://schemas.android.com/tools"--><!--android:layout_width="match_parent"--><!--android:layout_height="match_parent"--><!--tools:context="com.example.hemanth.converter.MainActivity">-->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBlue">

    <EditText
        android:id="@+id/editText2"
        android:layout_width="133dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/edit_celsius"
        android:inputType="number|numberDecimal"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginLeft="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="RtlHardcoded" />


    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:hint="@string/button_convert"
        android:onClick="Convert"
        android:padding="24dp"
        android:text="@string/convert"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintHorizontal_bias="0.498"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="153dp"
        android:layout_height="48dp"
        android:layout_marginEnd="43dp"
        android:ems="10"
        android:hint="@string/edit_frahaneit"
        android:inputType="numberSigned"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintTop_creator="1"
        android:layout_marginRight="32dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/RG"
        tools:ignore="RtlHardcoded" />


        <TextView
            android:id="@+id/history"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="10"
            android:scrollbars="vertical"
            android:text="@string/convertHistory"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintLeft_creator="1"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            />

    <RadioGroup
        android:id="@+id/RG"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="-23dp"
        android:orientation="horizontal"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1">

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/button_conversion_f_to_c"
            android:text="@string/fahrenheit_to_celsius" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/button_conversion_c_to_f"
            android:text="@string/celsius_to_fahrenheit" />

    </RadioGroup>

</android.support.constraint.ConstraintLayout>
