<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:text="@string/app_name"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        android:background="@color/converter_title_bg"
        android:textColor="@color/converter_title"/>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="133dp"
        android:layout_height="50dp"
        android:layout_marginEnd="41dp"
        android:layout_marginLeft="41dp"
        android:layout_marginRight="41dp"
        android:layout_marginStart="41dp"
        android:ems="10"
        android:hint="@string/edit_celsius"
        android:inputType="number|numberDecimal"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/editText"
        />


    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginTop="250dp"
        android:hint="@string/button_convert"
        android:onClick="Convert"
        android:padding="24dp"
        android:text="@string/convert"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="153dp"
        android:layout_height="48dp"
        android:layout_marginBottom="102dp"
        android:layout_marginEnd="43dp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:hint="@string/edit_frahaneit"
        android:inputType="numberSigned"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintTop_creator="1"
        />


    <TextView
        android:id="@+id/history"
        android:layout_width="373dp"
        android:layout_height="247dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="327dp"
        android:text="TextView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

</android.support.constraint.ConstraintLayout>
